Petal field container wrong position Fixes #147

--- a/package/src/dom/styles/manawave.module.css
+++ b/package/src/dom/styles/manawave.module.css
@@ -1,5 +1,4 @@
 .manawaveRoot {
-  display: block;
   position: relative;
   overflow: hidden;
 }
